2012-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.5-beta-20120416-1 released.

	* configure.ac (AC_INIT): Version number updated.
	(YEARS_OF_ISSUE): 2012 added.

	* srcdist-doc/NEWS.in: Updated; release notes added.
	* All files (r0-5-beta-20120416-1): Tag assigned.

2012-04-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Assign icon to temporary GUI executable file.

	* icons/pkgicon.ico: New file, shamelessly copied from synaptic.

	* configure.ac: Add identification for windres; propagate it to...
	* Makefile.in: ...here; use it to compile object from icon files...
	(srcdir/icons) [%.ico]: ...from this new vpath location.
	(gui.exe): Link to compiled icon's object file.
	(SRCDIST_SUBDIRS): Add icons directory.

2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Ensure that package removal requests are correctly scheduled.

	* src/pkgdeps.cpp (pkgXmlDocument::Schedule) [ACTION_REMOVE]: Schedule
	as a distinct case, when the installed version is not the most recent
	available release; consideration of this distinct case was previously
	erroneously overlooked.

2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct scheduling of new prerequisites when upgrading.

	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
	[ACTION_UPGRADE && ACTION_PRIMARY]: Don't exclude scheduling for this
	case of a prerequisite with no previously installed version; it may be
	a delegated primary requirement of a meta-package.

2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't require subsystem within user specified version bounds.

	* src/pkgdeps.cpp (pkgActionItem::ApplyBounds): Automatically consider
	"*" wild-card matches for subsystem, if user doesn't specify it.

2012-04-09  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Fix missing include.

	* src/pkgdeps.cpp (pkgopts.h): Include unconditionally; do not rely...